Created the 3rd version for demo

--- a/khoi/xmasgame.html
+++ b/khoi/xmasgame.html
@@ -37,7 +37,7 @@
     <div class="row justify-content-center cursor-gingerbread">
         <div class="col-6">
 
-            <svg id="svg-game-sides" class="svg-sides" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 1000">
+            <svg id="svg-game-sides" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 1000">
                 <defs></defs>
                 <title>XmasGame</title>
                 <path id="svg-left-side" class="svg-sides-style" d="M0,0,500,.5,363.89,214.74a37.56,37.56,0,0,0-3.83,8L295.4,412.33a71,71,0,0,0,.17,46.29l57.05,163.45a43.4,43.4,0,0,1-10,44.67L228.15,783.63a72.41,72.41,0,0,0-16,25.11L140,1000H0Z" transform="translate(0.5 0.5)"/>
