--- a/Daniel/index.html
+++ b/Daniel/index.html
@@ -2,24 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Final</title>
+    <title>The Xmas Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+
+<!-- Background Snowing Effect -->
 <div id="SnowingEffect">
 
-
-
+<!-- Title and Main Game Container -->
 	<h1>The Xmas Game</h1>
+	<div id="game-container">
 
-<div id="game-container">
+		<!-- SVG Settings -->
+		<?xml version="1.0" encoding="utf-8"?>
+		<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="800px" height="4000px" viewBox="0 0 800 4000" style="enable-background:new 0 0 800 4000;" xml:space="preserve">
 
-    <?xml version="1.0" encoding="utf-8"?>
-    <!-- Generator: Adobe Illustrator 21.0.2, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="800px"
-	 height="4000px" viewBox="0 0 800 4000" style="enable-background:new 0 0 800 4000;" xml:space="preserve">
-
-<!-- Left and Right side Snow -->
+<!-- Left Side Snow -->
 <g id="Left">
 	<path class="pathSnow" d="M0,140.8c60.2-8.6,138.4-19.4,198.1-8.3s118,45.9,137.6,99.5c20.6,56.3-5.3,118-37.8,169.2
 		s-73.1,100.3-85.1,158.7C191.3,664.2,265,762.7,333.1,848s138.1,187.9,108.3,290.5c-24.1,83-105.8,137.6-175,194.5
@@ -29,6 +29,8 @@
 		c37.4,127.6,190.2,199.2,242.1,322.4c16.5,39.3,21.8,82,21.6,124.2c-0.1,19.2-1.4,38.8-9.3,56.5c-18.7,42.2-69.4,63.8-117.5,73.2
 		c-108.2,21.3-220.3,1.2-328.7-18.9"/>
 </g>
+
+<!-- Right side Snow -->
 <g id="Right">
 	<path class="pathSnow" d="M800,134c31.3,0-130.1-1-170.4-5.2c-40.3-4.1-85.9,2-112.2,38c-16,21.9-22.1,51.1-26.2,79.5
 		c-6.4,43.7-9.3,88.2-8.8,132.5c0.5,45.3,3.5,95.2-20.5,130.7c-11.5,17-28.1,28.6-40.1,45.1c-30.3,41.4-25.6,105.2-5.5,154.4
@@ -74,7 +76,6 @@
 </svg>
 
 </div>
-
 </div>
 
 </body>
