--- a/Daniel/modal.html
+++ b/Daniel/modal.html
@@ -48,7 +48,7 @@
 
 		<!-- SVG Settings -->
         <?xml version="1.0" encoding="utf-8"?>
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="800px" height="4000px" viewBox="0 0 800 4000" style="enable-background:new 0 0 800 4000;" xml:space="preserve">
+        <svg id="svg-game-sides" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="800px" height="4000px" viewBox="0 0 800 4000" style="enable-background:new 0 0 800 4000;" xml:space="preserve">
 
 <!-- Left Side Snow -->
 <g id="Left" data-toggle="modal" data-target="#loseModal">
