Created separate class .viewAs3D

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div id="snowingEffect">
 	<h1>The Xmas Game</h1>
-	<div id="gameContainer">
+	<div id="gameContainer" class="viewAs3D">
 		<?xml version="1.0" encoding="utf-8"?>
 		<svg class="gamePath startPoint" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="800px" height="4000px" viewBox="0 0 800 4000" style="enable-background:new 0 0 800 4000;" xml:space="preserve">
 
