--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>The Xmas Game</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/actions.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/game.js" type="text/javascript"></script>
@@ -12,7 +13,8 @@
 
 <div id="snowingEffect">
 	<h1>The Xmas Game</h1>
-	<div id="gameContainer" class="viewAs3D">
+	<div id="gameContainer">
+
 		<?xml version="1.0" encoding="utf-8"?>
 		<svg class="gamePath startPoint" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="800px" height="4000px" viewBox="0 0 800 4000" style="enable-background:new 0 0 800 4000;" xml:space="preserve">
 
@@ -49,16 +51,16 @@
 
             <!-- Obstacles on Path -->
             <g class="Obstacles">
-                <image style="overflow:visible;" width="320" height="320" xlink:href="images/turd.png"  transform="matrix(0.1812 0 0 0.1812 406.8309 2044.3307)"></image>
-                <image style="overflow:visible;" width="320" height="320" xlink:href="images/turd.png"  transform="matrix(0.1812 0 0 0.1812 246.0034 1612.978)"></image>
-                <image style="overflow:visible;" width="320" height="320" xlink:href="images/turd.png"  transform="matrix(0.1812 0 0 0.1812 459.8274 1313)"></image>
-                <image style="overflow:visible;" width="320" height="320" xlink:href="images/turd.png"  transform="matrix(0.1812 0 0 0.1812 306.4885 575)"></image>
-                <image style="overflow:visible;" width="320" height="320" xlink:href="images/turd.png"  transform="matrix(0.1812 0 0 0.1812 403.0034 340.2069)"></image>
-                <image style="overflow:visible;" width="320" height="320" xlink:href="images/turd.png"  transform="matrix(0.1812 0 0 0.1812 306.4885 802.159)"></image>
-                <image style="overflow:visible;" width="320" height="320" xlink:href="images/turd.png"  transform="matrix(0.1812 0 0 0.1812 459.8274 2843.5493)"></image>
-                <image style="overflow:visible;" width="320" height="320" xlink:href="images/turd.png"  transform="matrix(0.1812 0 0 0.1812 382.0069 3523.0491)"></image>
-                <image style="overflow:visible;" width="320" height="320" xlink:href="images/turd.png"  transform="matrix(0.1812 0 0 0.1812 324.0138 3048)"></image>
-                <image style="overflow:visible;" width="320" height="320" xlink:href="images/turd.png"  transform="matrix(0.1812 0 0 0.1812 246.0034 2377.6035)"></image>
+                <image style="overflow:visible;" width="320" height="320" xlink:href="images/obstacle.png"  transform="matrix(0.1812 0 0 0.1812 406.8309 2044.3307)"></image>
+                <image style="overflow:visible;" width="320" height="320" xlink:href="images/obstacle.png"  transform="matrix(0.1812 0 0 0.1812 246.0034 1612.978)"></image>
+                <image style="overflow:visible;" width="320" height="320" xlink:href="images/obstacle.png"  transform="matrix(0.1812 0 0 0.1812 459.8274 1313)"></image>
+                <image style="overflow:visible;" width="320" height="320" xlink:href="images/obstacle.png"  transform="matrix(0.1812 0 0 0.1812 306.4885 575)"></image>
+                <image style="overflow:visible;" width="320" height="320" xlink:href="images/obstacle.png"  transform="matrix(0.1812 0 0 0.1812 403.0034 340.2069)"></image>
+                <image style="overflow:visible;" width="320" height="320" xlink:href="images/obstacle.png"  transform="matrix(0.1812 0 0 0.1812 306.4885 802.159)"></image>
+                <image style="overflow:visible;" width="320" height="320" xlink:href="images/obstacle.png"  transform="matrix(0.1812 0 0 0.1812 459.8274 2843.5493)"></image>
+                <image style="overflow:visible;" width="320" height="320" xlink:href="images/obstacle.png"  transform="matrix(0.1812 0 0 0.1812 382.0069 3523.0491)"></image>
+                <image style="overflow:visible;" width="320" height="320" xlink:href="images/obstacle.png"  transform="matrix(0.1812 0 0 0.1812 324.0138 3048)"></image>
+                <image style="overflow:visible;" width="320" height="320" xlink:href="images/obstacle.png"  transform="matrix(0.1812 0 0 0.1812 246.0034 2377.6035)"></image>
             </g>
 
             <!-- Christmastrees and Raindeers on Snow -->
@@ -97,10 +99,14 @@
 
 <div id="win-box" class="message-box">
 	<p class="messageText win">YOU WIN!</p>
+    <div class="pyro">
+        <div class="before"></div>
+        <div class="after"></div>
+    </div>
 	<button class="button winButton stop-animation">Play again!</button>
 </div>
 
-<div id="counter" class="message-box">
+<div id="counter" class="counter-box">
 	<p id="counter_content" class="messageText counter"></p>
 </div>
 
