--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>The Xmas Game</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/music.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/actions.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -110,6 +111,9 @@
 	<p id="counter_content" class="messageText counter"></p>
 </div>
 
-
+<div id="bg-audio">
+    <embed src="sound/bgmusic.mp3" type="audio/mpeg">
+    </embed>
+</div>
 </body>
 </html>
