Fixed bug for background sound

--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
 	<p class="messageText lose">YOU LOSE!</p>
 	<button class="button loseButton stop-animation">Try again!</button>
 </div>
-
 <div id="win-box" class="message-box">
 	<p class="messageText win">YOU WIN!</p>
     <div class="pyro">
@@ -106,16 +105,13 @@
     </div>
 	<button class="button winButton stop-animation">Play again!</button>
 </div>
-
 <div id="counter" class="counter-box">
 	<p id="counter_content" class="messageText counter"></p>
 </div>
-
-<div id="bg-audio">
+<div id="bg-audio" class="farAway">
     <embed src="sound/bgmusic.mp3" type="audio/mpeg">
     </embed>
 </div>
-
 
 </body>
 </html>
