--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/music.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/actions.css">
+	<link rel="stylesheet" href="css/lights.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/game.js" type="text/javascript"></script>
@@ -15,6 +16,28 @@
 <div id="snowingEffect">
 	<h1>The Xmas Game</h1>
 	<div id="gameContainer">
+	
+	<!--C Lights in Game Container  START here-->	
+	<ul class="strand">
+    <!-- <li> tags create the individual christmas lights. we're going to have 43 -->
+    <li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	</ul>
+	<!--C Lights in Game Container  END here-->	
 
 		<?xml version="1.0" encoding="utf-8"?>
 		<svg class="gamePath startPoint" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="800px" height="4000px" viewBox="0 0 800 4000" style="enable-background:new 0 0 800 4000;" xml:space="preserve">
