Minor css fixes for final score

--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@
 <div id="lose-box" class="message-box">
 	<p class="messageText lose">YOU LOSE!</p>
     <div id="looseScoreBox">
+        <p>Score:</p>
         <p id="looseFinalScore"></p>
-        <p> / 11</p>
+        <p>/11</p>
     </div>
 	<button class="button loseButton stop-animation">Try again!</button>
 </div>
@@ -136,8 +137,9 @@
         <div class="after"></div>
     </div>
     <div id="winScoreBox">
+        <p>Score:</p>
         <p id="winFinalScore"></p>
-        <p> / 11</p>
+        <p>/11</p>
     </div>
 	<button class="button winButton stop-animation">Play again!</button>
 </div>
