--- a/index.html
+++ b/index.html
@@ -6,46 +6,24 @@
     <link rel="stylesheet" href="css/music.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/actions.css">
-	<link rel="stylesheet" href="css/lights.css">
+    <link rel="stylesheet" href="css/lights.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/game.js" type="text/javascript"></script>
+    <script src="js/game.js" type="text/javascript"></script>
 </head>
 <body>
 
 <div id="snowingEffect">
-	<h1>The Xmas Game</h1>
-	<div id="gameContainer">
-	
-	<!--C Lights in Game Container  START here-->	
-	<ul class="strand">
-    <!-- <li> tags create the individual christmas lights. we're going to have 43 -->
-    <li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	</ul>
-	<!--C Lights in Game Container  END here-->
+    <h1>The Xmas Game</h1>
+    <div id="gameContainer">
+
         <div id="scoreBoard">
-            <h2>
-                SCORE:
-            </h2>
-            <p id="scoreCounter">0</p>
+            <img src="images/presents.png">
+            <p id="scoreCounter">0 / 10</p>
         </div>
-		<?xml version="1.0" encoding="utf-8"?>
-		<svg class="gamePath startPoint" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="800px" height="4000px" viewBox="0 0 800 4000" style="enable-background:new 0 0 800 4000;" xml:space="preserve">
+
+        <?xml version="1.0" encoding="utf-8"?>
+        <svg class="gamePath startPoint" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="800px" height="4000px" viewBox="0 0 800 4000" style="enable-background:new 0 0 800 4000;" xml:space="preserve">
 
             <g class="Path">
                 <path class="leftSide" d="M0,189.8c60.2-8.6,138.4-19.4,198.1-8.3s118,45.9,137.6,99.5c20.6,56.3-5.3,118-37.8,169.2
@@ -63,7 +41,7 @@
                     c4.9,10.4,93.1,15.9,101.5,22.4c7.2,5.5,46.1,1.2,54.5,3.6c50.1,14,94.4-4.7,145-15.9"/>
             </g>
 
-             <!-- Presents on Path -->
+            <!-- Presents on Path -->
             <g class="Presents">
                 <image id="p1" style="overflow:visible;" width="200" height="230" xlink:href="images/presents.png"  transform="matrix(0.24 0 0 0.24 359 459)"></image>
                 <image id="p2" style="overflow:visible;" width="200" height="230" xlink:href="images/presents.png"  transform="matrix(0.24 0 0 0.24 275 661)"></image>
@@ -72,10 +50,9 @@
                 <image id="p5" style="overflow:visible;" width="200" height="230" xlink:href="images/presents.png"  transform="matrix(0.24 0 0 0.24 352 1685)"></image>
                 <image id="p6" style="overflow:visible;" width="200" height="230" xlink:href="images/presents.png"  transform="matrix(0.24 0 0 0.24 411.8274 1913)"></image>
                 <image id="p7" style="overflow:visible;" width="200" height="230" xlink:href="images/presents.png"  transform="matrix(0.24 0 0 0.24 227 2284.9082)"></image>
-                <image id="p8" style="overflow:visible;" width="200" height="230" xlink:href="images/presents.png"  transform="matrix(0.24 0 0 0.24 352 2379)"></image>
-                <image id="p9" style="overflow:visible;" width="200" height="230" xlink:href="images/presents.png"  transform="matrix(0.24 0 0 0.24 363.6586 2925)"></image>
-                <image id="p10" style="overflow:visible;" width="200" height="230" xlink:href="images/presents.png"  transform="matrix(0.24 0 0 0.24 240 3154)"></image>
-                <image id="p11" style="overflow:visible;" width="200" height="230" xlink:href="images/presents.png"  transform="matrix(0.24 0 0 0.24 376 3282.604)"></image>
+                <image id="p8" style="overflow:visible;" width="200" height="230" xlink:href="images/presents.png"  transform="matrix(0.24 0 0 0.24 363.6586 2925)"></image>
+                <image id="p9" style="overflow:visible;" width="200" height="230" xlink:href="images/presents.png"  transform="matrix(0.24 0 0 0.24 240 3154)"></image>
+                <image id="p10" style="overflow:visible;" width="200" height="230" xlink:href="images/presents.png"  transform="matrix(0.24 0 0 0.24 376 3282.604)"></image>
             </g>
 
             <!-- Obstacles on Path -->
@@ -117,34 +94,66 @@
                 <image style="overflow:visible;" width="390" height="223" xlink:href="images/FinishLine.png"  transform="matrix(0.4154 0 0 0.4154 326.0017 84.1134)"></image>
             </g>
 	    </svg>
-	</div>  <!-- gameContainer -->
+    </div>  <!-- gameContainer -->
 </div> <!-- snowingEffect -->
 
 <!-- Messages -->
 <div id="lose-box" class="message-box">
-	<p class="messageText lose">YOU LOSE!</p>
-    <div id="looseScoreBox">
-        <p>Score:</p>
-        <p id="looseFinalScore"></p>
-        <p>/11</p>
-    </div>
-	<button class="button loseButton stop-animation">Try again!</button>
+    <p class="messageText lose">YOU LOSE!</p>
+    <p id="looseFinalScore">    </p>
+    <button class="button loseButton stop-animation">Try again!</button>
 </div>
 <div id="win-box" class="message-box">
-	<p class="messageText win">YOU WIN!</p>
+    <!--C Lights in Game Container  START here-->
+    <ul class="strand">
+        <!-- <li> tags create the individual christmas lights. we're going to have 43 -->
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+    <!--C Lights in Game Container  END here-->
     <div class="pyro">
         <div class="before"></div>
         <div class="after"></div>
-    </div>
-    <div id="winScoreBox">
-        <p>Score:</p>
+        <p class="messageText win">YOU WIN!</p>
         <p id="winFinalScore"></p>
-        <p>/11</p>
+
     </div>
-	<button class="button winButton stop-animation">Play again!</button>
+    <button class="button winButton stop-animation">Play again!</button>
 </div>
 <div id="counter" class="counter-box">
-	<p id="counter_content" class="messageText counter"></p>
+    <p id="counter_content" class="messageText counter"></p>
 </div>
 <div id="bg-audio" class="farAway">
     <embed src="sound/bgmusic.mp3" type="audio/mpeg">
